--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locomotive</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21469" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -40,6 +40,7 @@
                 <li class="sidebar_li"><a href="">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="">ДОСТАВКА</a></li>
+                <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
             </ul>
