--- a/index.html
+++ b/index.html
@@ -58,13 +58,44 @@
                         высокую репутацию среди наших клиентов. Мы гарантируем качество нашей продукции и
                         оперативность поставок.</p>
                     <div class="intro_but">
-                        <a href="">Дилерская продукция <img src="./img/arrow-right-intro.png" alt=""></a>
-                        <a href="">Основная продукция <img src="./img/arrow-right-intro.png" alt=""></a>
-                        <a href="">На складе <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <a href="" class="in_btn">Дилерская продукция <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <a href="" class="in_btn">Основная продукция <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <a href="" class="in_btn">На складе <img src="./img/arrow-right-intro.png" alt=""></a>
                     </div>
                 </div>
                 <div class="intro_img">
                     <img src="./img/intro-img.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="about_wrap">
+                <h2>О нас</h2>
+                <div class="about_cont">
+                    <div class="about_cont_left">
+                        <p>Компания «Промоборудование» является лидером на рынке поставок запасных частей к тепловозам,
+                         вагонам и материалов ВСП. Наша компания имеет богатый опыт работы и высокую репутацию среди наших клиентов.
+                          Мы гарантируем качество нашей продукции и оперативность поставок. 
+                          Наша компания имеет собственные производственные площади и мощность,
+                         что позволяет нам изготавливать продукцию соответствующего профиля. </p>
+                        <p>Мы работаем с огромным количеством надежных поставщиков, что обеспечивает нам
+                             возможность предоставлять нашим клиентам широкий ассортимент товаров по
+                              доступным ценам. Более того, у нас есть сотни постоянных покупателей
+                               различного масштаба по всей России и странам СНГ, что свидетельствует
+                                о высоком качестве нашей работы. </p>
+                        <p>Мы готовы предложить нашим клиентам индивидуальный подход и помощь
+                             в выборе необходимых запасных частей и материалов ВСП.</p>
+                    </div>
+                    <div class="about_cont_img">
+                        <div class="about_cont_img_l">
+                            <img src="./img/about-1.png" alt="">
+                            <img src="./img/about-2.png" alt="">
+                        </div>
+                        <div class="about_cont_img_r">
+                            <img src="./img/about-3.png" alt="">
+                            <img src="./img/about-4.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
