--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header class="header">
@@ -99,6 +100,326 @@
                 </div>
             </div>
         </section>
+        <section class="our_serv">
+            <div class="out_serv_wrap">
+                <h2>Наши услуги</h2>
+                <div class="card_top">
+                    <div class="ct_desc">
+                        <div class="ct_desc_wrap">
+                            <h3>Изготовление комплектующих под заказ</h3>
+                            <p>Наша компания готова изготовить различные виды машиностроительной продукции, 
+                                как по чертежам заказчика, так и по "образцу" с разработкой конструкторской 
+                                документации.</p>
+                        </div>
+                        <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
+                    </div>
+                    <div class="ct_img">
+                        <img src="./img/OurServ-1.png" alt="">
+                    </div>
+                </div>
+                <div class="card_bot">
+                    <div class="card_bot_l">
+                        <div class="cbl_desc">
+                            <div class="cbl_desc_wrap">
+                                <h3>Ремонт</h3>
+                                <p>Наша компания выполняет, как гарантийный так и постгарантийный ремонт изделий.</p>
+                            </div>
+                            <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
+                        </div>
+                        <div class="cbl_img">
+                            <img src="./img/OurServ-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card_bot_r">
+                        <div class="cbr_desc">
+                            <div class="cbl_desc_wrap">
+                                <h3>Конструкторские услуги</h3>
+                                <p>Наша компания имеет собственное конструкторское бюро и готова оказать соответствующие услуги.</p>
+                            </div>
+                            <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
+                        </div>
+                        <div class="cbr_img">
+                            <img src="./img/OurServ-3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="spec_offers">
+            <div class="spec_offers_wrap">
+                <h2>Спецпредложения</h2>
+                <div class="swiper">
+                    <div class="cards_wrap swiper-wrapper">
+                        <div class="cards">
+                            <div class="cards_desc">
+                                <img src="./img/spec-offers.png" alt="">
+                                <h4>Втулка</h4>
+                                <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
+                            </div>
+                            <div class="cards_price">
+                                <p class="price"><span>1 900,65 Р</span>1 200,25 Р</p>
+                                <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards_desc">
+                                <img src="./img/spec-offers.png" alt="">
+                                <h4>Цилиндр включения жалюзи</h4>
+                                <p>ТГМ4.10.46.000 ТГМ4.10.46.000</p>
+                            </div>
+                            <div class="cards_price">
+                                <p class="price"><span>7 900,65 Р</span>2 200,25 Р</p>
+                                <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards_desc">
+                                <img src="./img/spec-offers.png" alt="">
+                                <h4>Балансир</h4>
+                                <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                            </div>
+                            <div class="cards_price">
+                                <p class="price"><span>11 900,65 Р</span>7 100,25 Р</p>
+                                <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards_desc">
+                                <img src="./img/spec-offers.png" alt="">
+                                <h4>Вентиль электропневматический</h4>
+                                <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                            </div>
+                            <div class="cards_price">
+                                <p class="price"><span>7 900,65 Р</span>2 200,25 Р</p>
+                                <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="pagination">
+                            <div class="pag_left">
+                                <a href="" class="arrows"><img src="./img/arrow-left.svg" alt=""></a>
+                            </div>
+                            <div class="pag_right">
+                                <a href="" class="arrows"><img src="./img/arrow-right.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <!-- <div class="cards">
+                            <div class="cards_desc">
+                                <img src="./img/spec-offers.png" alt="">
+                                <h4>Вентиль электропневматический</h4>
+                                <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                            </div>
+                            <div class="cards_price">
+                                <p class="price"><span>7 900,65 Р</span>2 200,25 Р</p>
+                                <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="catalog">
+            <div class="catalog_wrap">
+                <h2>Каталог</h2>
+                <div class="catalog_card">
+                    <div class="catalog_img"></div>
+                    <ul class="catalog_list">
+                        <li class="catalog_li">
+                            <p>Для Тепловозов</p>
+                            <a href="">Перейти</a>
+                        </li>
+                        <li class="catalog_li">
+                            <p>Для Вагонов</p>
+                            <a href="">Перейти</a>
+                        </li>
+                        <li class="catalog_li">
+                            <p>Для Тепловозов</p>
+                            <a href="">Перейти</a>
+                        </li>
+                        <li class="catalog_li">
+                            <p>Для Дизелей</p>
+                            <a href="">Перейти</a>
+                        </li>
+                        <li class="catalog_li">
+                            <p>Электрооборудование</p>
+                            <a href="">Перейти</a>
+                        </li>
+                        <li class="catalog_li">
+                            <p>Для гидропередач</p>
+                            <a href="">Перейти</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="advantages">
+            <div class="advant_wrap">
+                <h2>Наши преимущества</h2>
+                <div class="adv_card">
+                    <div class="advant_left">
+                        <p><span>Выбрав нас,</span> вы получите надежного партнера, 
+                            <span>который</span> всегда готов помочь <span>и</span> поддержать вас
+                            в любых ваших потребностях.</p>
+                    </div>
+                    <div class="advant_right">
+                        <div class="ar_card">
+                            <div class="ar_card_top">
+                                <img src="./img/adv-ico-1.svg" alt="">
+                                <h4>Качество</h4>
+                            </div>
+                            <div class="ar_card_bot">
+                                <p>Качественный и профессиональный сервис. 
+                                    Мы готовы предложить индивидуальный подход к каждому клиенту.</p>
+                            </div>
+                        </div>
+                        <div class="ar_card">
+                            <div class="ar_card_top">
+                                <img src="./img/adv-ico-2.svg" alt="">
+                                <h4>Доставка</h4>
+                            </div>
+                            <div class="ar_card_bot">
+                                <p>Наша логистика быстро и качественно доставляет продукцию клиентам в любую точку мира.</p>
+                            </div>
+                        </div>
+                        <div class="ar_card">
+                            <div class="ar_card_top">
+                                <img src="./img/adv-ico-3.svg" alt="">
+                                <h4>Выбор</h4>
+                            </div>
+                            <div class="ar_card_bot">
+                                <p>Большой склад и резерв продукции. Дилеры 
+                                    и многочисленные надежные поставщики обеспечивают широкий выбор продукции 
+                                    и высокое качество. </p>
+                            </div>
+                        </div>
+                        <div class="ar_card">
+                            <div class="ar_card_top">
+                                <img src="./img/adv-ico-4.svg" alt="">
+                                <h4>Экономия</h4>
+                            </div>
+                            <div class="ar_card_bot">
+                                <p>Мы предлагаем различные скидки и гибкие условия оплаты для наших клиентов, чтобы сделать сотрудничество еще более выгодным 
+                                    и приятным. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="partners">
+            <div class="partners_wrap">
+                <h2>Партнеры</h2>
+                <div class="partners_card">
+                    <ul class="partners_list">
+                        <li class="partners_li">
+                            <p>ОАО "Тюменский Аккумуляторный завод"</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>ООО «Торговый дом "Завод теплообменного оборудования"</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>ООО ПКФ "Карон-Мет"</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>ООО “Торговый дом “Стахановский завод </p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>ООО "Техно-плюс"</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>ЗАО "Коршуновский литейно-механический завод"</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                        <li class="partners_li">
+                            <p>АО «ПО Физтех»</p>
+                            <a href="">Посмотреть</a>
+                        </li>
+                    </ul>
+                    <div class="partners_img">
+                        <img src="./img/partners-map.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="geography">
+            <div class="geography_wrap">
+                <h2>География деятельности</h2>
+                <img src="./img/map.svg" alt="">
+                <div class="geo_desc">
+                    <div class="geo_desc_cards">
+                        <p><span>61</span>регион России</p>
+                    </div>
+                    <div class="geo_desc_cards">
+                        <p><span>172</span>города</p>
+                    </div>
+                    <div class="geo_desc_cards">
+                        <p><span>271</span>предприятие</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer_wrap">
+            <div class="footer_left">
+                <div class="footer_left_top">
+                    <p>Если Вы являетесь конечным заказчиком и хотели бы получить рекомендации
+                         от других предприятий в своем регионе, напишите нам на почту или
+                          свяжитесь с нашими менеджерами по телефону.</p>
+                    <div class="foot_left_btn">
+                        <a href="">Позвонить</a>
+                        <a href="">Написать</a>
+                    </div>
+                </div>
+                <div class="footer_left_bot">
+                    <h3>Контакты</h3>
+                    <div class="footer_cont_card">
+                        <div class="footer_cont_card_l">
+                            <p>Отдел сбыта</p>
+                            <p>8(4832) 32-10-65</p>
+                            <p>32-10-66</p>
+                            <p>32-10-67</p>
+                            <p> info.sbyt@32po.ru</p>
+                        </div>
+                        <div class="footer_cont_card_r">
+                            <div class="footer_cont_card_r_desc">
+                                <p>Главный бухгалтер</p>
+                                <p>info.buh@32po.ru</p>
+                            </div>
+                            <div class="footer_cont_card_r_desc">
+                                <p>Отдел снабжения</p>
+                                <p>info.snab@32po.ru</p>
+                            </div>
+                            <div class="footer_cont_card_r_desc">
+                                <p>Отдел логистики</p>
+                                <p> info.log@32po.ru</p>
+                            </div>
+                            <div class="footer_cont_card_r_desc">
+                                <p>Производство</p>
+                                <p>Брянск, ул. 50 Армии, 1</p>
+                                <p> info.pro@32po.ru</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_right">
+                <form action="" class="contact_us">
+                    <h4>Обратная связь</h4>
+                    <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
+                        заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
+                    <input type="text" name="" id="" placeholder="Имя">
+                    <input type="text" name="" id="" placeholder="Телефон">
+                    <input type="submit" name="Отправить">
+                </form>
+                <img src="./img/logo-footer.svg" alt="">
+                <p>Более 13 лет успешной поставки оборудования и запчастей. Более 6 лет собственного производства.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
