--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                     <img src="img/basket.svg" alt="">
                 </a>
             </div>
+            <div class="header_mobile">
+                <a href="#!" class="search_but_on" id="search_but_on"><img src="./img/search-ico.svg" alt=""></a>
+                <form action="" class="search_form_mob" id="search_form_mob">
+                    <input type="search" name="" id="" placeholder="Поиск по сайту" class="search_inp_mob">
+                </form>
+                <p class="p-adress" id="p-adress">Брянск, ул. 50 Армии, 1</p>
+                <a href="" class="call"><img src="./img/header-phone.svg" alt=""></a>
+            </div>
         </div>
     </header>
     <section class="sidebar">
@@ -225,27 +233,27 @@
                     <ul class="catalog_list">
                         <li class="catalog_li">
                             <p>Для Тепловозов</p>
-                            <a href="">Перейти</a>
+                            <a href=""><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
                             <p>Для Вагонов</p>
-                            <a href="">Перейти</a>
+                            <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
                             <p>Для Тепловозов</p>
-                            <a href="">Перейти</a>
+                            <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
                             <p>Для Дизелей</p>
-                            <a href="">Перейти</a>
+                            <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
                             <p>Электрооборудование</p>
-                            <a href="">Перейти</a>
+                            <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
                             <p>Для гидропередач</p>
-                            <a href="">Перейти</a>
+                            <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                     </ul>
                 </div>
@@ -312,31 +320,31 @@
                     <ul class="partners_list">
                         <li class="partners_li">
                             <p>ОАО "Тюменский Аккумуляторный завод"</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>ООО «Торговый дом "Завод теплообменного оборудования"</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>ООО ПКФ "Карон-Мет"</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>ООО “Торговый дом “Стахановский завод </p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>ООО "Техно-плюс"</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>ЗАО "Коршуновский литейно-механический завод"</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                         <li class="partners_li">
                             <p>АО «ПО Физтех»</p>
-                            <a href="">Посмотреть</a>
+                            <a href=""><span class="arow_hide">&#8594</span>Посмотреть</a>
                         </li>
                     </ul>
                     <div class="partners_img">
@@ -371,37 +379,37 @@
                          от других предприятий в своем регионе, напишите нам на почту или
                           свяжитесь с нашими менеджерами по телефону.</p>
                     <div class="foot_left_btn">
-                        <a href="">Позвонить</a>
-                        <a href="">Написать</a>
+                        <a href="">Позвонить <img src="./img/footer-call-ico.svg" alt=""></a>
+                        <a href="">Написать <img src="./img/footer-mail-ico.svg" alt=""></a>
                     </div>
                 </div>
                 <div class="footer_left_bot">
                     <h3>Контакты</h3>
                     <div class="footer_cont_card">
                         <div class="footer_cont_card_l">
-                            <p>Отдел сбыта</p>
-                            <p>8(4832) 32-10-65</p>
-                            <p>32-10-66</p>
-                            <p>32-10-67</p>
-                            <p> info.sbyt@32po.ru</p>
+                            <p class="footer_bold">Отдел сбыта</p>
+                            <p class="footer_p">8(4832) 32-10-65</p>
+                            <p class="footer_p">32-10-66</p>
+                            <p class="footer_p">32-10-67</p>
+                            <p class="footer_p"> info.sbyt@32po.ru</p>
                         </div>
                         <div class="footer_cont_card_r">
                             <div class="footer_cont_card_r_desc">
-                                <p>Главный бухгалтер</p>
-                                <p>info.buh@32po.ru</p>
+                                <p class="footer_bold">Главный бухгалтер</p>
+                                <p class="footer_p">info.buh@32po.ru</p>
                             </div>
                             <div class="footer_cont_card_r_desc">
-                                <p>Отдел снабжения</p>
-                                <p>info.snab@32po.ru</p>
+                                <p class="footer_bold">Отдел снабжения</p>
+                                <p class="footer_p">info.snab@32po.ru</p>
                             </div>
                             <div class="footer_cont_card_r_desc">
-                                <p>Отдел логистики</p>
-                                <p> info.log@32po.ru</p>
+                                <p class="footer_bold">Отдел логистики</p>
+                                <p class="footer_p"> info.log@32po.ru</p>
                             </div>
                             <div class="footer_cont_card_r_desc">
-                                <p>Производство</p>
-                                <p>Брянск, ул. 50 Армии, 1</p>
-                                <p> info.pro@32po.ru</p>
+                                <p class="footer_bold">Производство</p>
+                                <p class="footer_p">Брянск, ул. 50 Армии, 1</p>
+                                <p class="footer_p"> info.pro@32po.ru</p>
                             </div>
                         </div>
                     </div>
@@ -412,14 +420,18 @@
                     <h4>Обратная связь</h4>
                     <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
                         заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                    <input type="text" name="" id="" placeholder="Имя">
-                    <input type="text" name="" id="" placeholder="Телефон">
-                    <input type="submit" name="Отправить">
+                    <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
+                    <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
+                    <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
                 </form>
-                <img src="./img/logo-footer.svg" alt="">
-                <p>Более 13 лет успешной поставки оборудования и запчастей. Более 6 лет собственного производства.</p>
+                <div class="footer_right_cont">
+                <img src="./img/logo-footer.png" alt="" class="footer_right_img">
+                <p class="footer_right_p">Более 13 лет успешной поставки оборудования и
+                     запчастей. Более 6 лет собственного производства.</p>
+                </div>
             </div>
         </div>
     </footer>
+    <script src="./js/main.js" ></script>
 </body>
 </html>
