--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <a href="" class="basket_but">
                     <p class="basket_link">Корзина</p>
                     <img src="img/basket.svg" alt="">
+                    <img src="./img/basket-ellipse.png" alt="" class="bask-el-d">
+                    <p class="bask-p-d">1</p>
                 </a>
             </div>
             <div class="header_mobile">
@@ -56,20 +58,68 @@
             <a href="" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
     </section>
+    <section class="slidebar_mob">
+        <div class="slidebar_mob_wrap">
+            <a href="#!" class="menu_mob burger">Меню<img src="./img/slidebar-burger.png" alt=""></a>
+            <div class="intro_img_mob">
+                <img src="./img/slidebar-mob-logo.png" alt="">
+            </div>
+            <a href="" class="basket_but_mob">
+                Корзина
+                <img src="img/basket.svg" alt="" class="basket-img">
+                <img src="./img/basket-ellipse.png" alt="" class="bask-el">
+                <p class="bask-p">1</p>
+            </a>
+        </div>
+    </section>
+    <nav class="menu_nav">
+            <div class="menu_name">
+                <h3>Меню</h3>
+                <div class="menu_nav-close">
+                    <img src="./img/header-nav-close.png" alt="">
+                </div>
+            </div>
+            <ul class="menu_list">
+                <li class="menu_item">
+                    <a href="/" class="main_lev">ГЛАВНАЯ</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">ПРОДУКЦИЯ</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">УСЛУГИ</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">ДОСТАВКА</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">ПРОИЗВОДСТВО</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">ИНФОРМАЦИЯ</a>
+                </li>
+                <li class="menu_item">
+                    <a href="/" class="main_lev">КОНТАКТЫ</a>
+                </li>
+            </ul>
+    </nav>
     <main class="main">
         <section class="intro">
             <div class="intro_wrap">
                 <div class="intro_info">
                     <h1>Продажа запчастей</h1>
                     <p class="h1_p">К ТЕПЛОВОЗАМ И ВАГОНАМ</p>
+                    <div class="intro_img-mob">
+                        <img src="./img/intro-img-small.png" alt="">
+                    </div>
                     <p class="p_desc">Компания «Промоборудование» является лидером на рынке поставок запасных частей к тепловозам,
                         вагонам и материалов ВСП. Наша компания имеет богатый опыт работы и
                         высокую репутацию среди наших клиентов. Мы гарантируем качество нашей продукции и
                         оперативность поставок.</p>
                     <div class="intro_but">
                         <a href="" class="in_btn">Дилерская продукция <img src="./img/arrow-right-intro.png" alt=""></a>
-                        <a href="" class="in_btn">Основная продукция <img src="./img/arrow-right-intro.png" alt=""></a>
-                        <a href="" class="in_btn">На складе <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <a href="" class="in_btn in_btn_1">Основная продукция <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <a href="" class="in_btn in_btn_2">На складе <img src="./img/arrow-right-intro.png" alt=""></a>
                     </div>
                 </div>
                 <div class="intro_img">
@@ -113,6 +163,9 @@
                 <h2>Наши услуги</h2>
                 <div class="card_top">
                     <div class="ct_desc">
+                        <div class="ct_img_mob">
+                            <img src="./img/OurServ-1-mob.png" alt="">
+                        </div>
                         <div class="ct_desc_wrap">
                             <h3>Изготовление комплектующих под заказ</h3>
                             <p>Наша компания готова изготовить различные виды машиностроительной продукции, 
@@ -129,6 +182,9 @@
                     <div class="card_bot_l">
                         <div class="cbl_desc">
                             <div class="cbl_desc_wrap">
+                                <div class="cbl_img_mob">
+                                    <img src="./img/OurServ-2-mob.png" alt="">
+                                </div>
                                 <h3>Ремонт</h3>
                                 <p>Наша компания выполняет, как гарантийный так и постгарантийный ремонт изделий.</p>
                             </div>
@@ -141,6 +197,9 @@
                     <div class="card_bot_r">
                         <div class="cbr_desc">
                             <div class="cbl_desc_wrap">
+                                <div class="cbr_img_mob">
+                                    <img src="./img/OurServ-3-mob.png" alt="">
+                                </div>
                                 <h3>Конструкторские услуги</h3>
                                 <p>Наша компания имеет собственное конструкторское бюро и готова оказать соответствующие услуги.</p>
                             </div>
@@ -240,7 +299,7 @@
                             <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
-                            <p>Для Тепловозов</p>
+                            <p>Для компрессоров</p>
                             <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
@@ -248,7 +307,7 @@
                             <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
-                            <p>Электрооборудование</p>
+                            <p class="elob">Электрооборудование</p>
                             <a href="" class="catalog_li_a"><span class="arow_hide">&#8594</span> Перейти</a>
                         </li>
                         <li class="catalog_li">
