--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                 </form>
             </div>
             <div class="header_right">
+                <div class="div_phone_ad">
+                    <div class="div_telephone">
+                        <img src="img/phone-ico.svg" alt="" class="img_phone_ad">
+                        <p>8 - 999 - 999 - 00 - 00</p>
+                    </div>
+                    <p class="p-adress_ad">Брянск, ул. 50 Армии, 1</p>
+                </div>
                 <div class="div_phone">
                     <img src="img/phone-ico.svg" alt="" class="img_phone">
                     <p>8 - 999 - 999 - 00 - 00</p>
@@ -73,6 +80,17 @@
                 <p class="bask-p">1</p>
             </a>
         </div>
+    </section>
+    <section class="menu_adaptive">
+            <ul class="menu_adaptive_list">
+                <li class="menu_adaptive_li"><a href="">Главная</a></li>
+                <li class="menu_adaptive_li"><a href="">Продукция</a></li>
+                <li class="menu_adaptive_li"><a href="">Услуги</a></li>
+                <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
+                <li class="menu_adaptive_li"><a href="">Производство</a></li>
+                <li class="menu_adaptive_li"><a href="">Информация</a></li>
+                <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+            </ul>
     </section>
     <nav class="menu_nav">
             <div class="menu_name">
@@ -149,12 +167,16 @@
                     </div>
                     <div class="about_cont_img">
                         <div class="about_cont_img_l">
-                            <img src="./img/about-1.png" alt="">
-                            <img src="./img/about-2.png" alt="">
+                            <img src="./img/about-1.png" alt="" class="big-img">
+                            <img src="./img/about-1-small.png" alt="" class="small-img">
+                            <img src="./img/about-2.png" alt="" class="big-img">
+                            <img src="./img/about-2-small.png" alt="" class="small-img">
                         </div>
                         <div class="about_cont_img_r">
-                            <img src="./img/about-3.png" alt="">
-                            <img src="./img/about-4.png" alt="">
+                            <img src="./img/about-3.png" alt="" class="big-img">
+                            <img src="./img/about-3-small.png" alt="" class="small-img">
+                            <img src="./img/about-4.png" alt="" class="big-img">
+                            <img src="./img/about-4-small.png" alt="" class="small-img">
                         </div>
                     </div>
                 </div>
@@ -177,7 +199,8 @@
                         <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
                     </div>
                     <div class="ct_img">
-                        <img src="./img/OurServ-1.png" alt="">
+                        <img src="./img/OurServ-1.png" alt="" class="our-serv-big">
+                        <img src="./img/OurServ-1-adaptive.png" alt="" class="our-serv-small">
                     </div>
                 </div>
                 <div class="card_bot">
@@ -193,7 +216,8 @@
                             <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
                         </div>
                         <div class="cbl_img">
-                            <img src="./img/OurServ-2.png" alt="">
+                            <img src="./img/OurServ-2.png" alt="" class="our-serv-big">
+                            <img src="./img/OurServ-2-adaptive.png" alt="" class="our-serv-small">
                         </div>
                     </div>
                     <div class="card_bot_r">
@@ -208,7 +232,8 @@
                             <a href="" class="serv_btn">Заказать<img src="./img/arrow-right-intro.png" alt=""></a>
                         </div>
                         <div class="cbr_img">
-                            <img src="./img/OurServ-3.png" alt="">
+                            <img src="./img/OurServ-3.png" alt="" class="our-serv-big">
+                            <img src="./img/OurServ-3-adaptive.png" alt="" class="our-serv-small">
                         </div>
                     </div>
                 </div>
