--- a/dostavka.html
+++ b/dostavka.html
@@ -112,6 +112,13 @@
                         <p>|</p>
                         <a href="">Доставка</a>
                     </div>
+                    <div class="intro_nav_mob">
+                        <a href=""><img src="./img/dostavka/arrow-left-black.svg" alt=""></a>
+                        <a href="">Доставка</a>
+                    </div>
+                    <div class="intro_img_mob">
+                        <img src="./img/dostavka/intro-img-mob.png" alt="">
+                    </div>
                     <h2 class="intro_h2">Доставка</h2>
                     <p class="desc_p">Цена на доставку груза рассчитывается по тарифам выбранной вами
                          транспортной компании исходя из веса, объёма груза, а также расстояния доставки.
