--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
                     <div class="partners_img_mob">
                         <img src="./img/partners-map-mob.png" alt="">
                     </div>
+                    <div class="partners_img_adaptive">
+                        <img src="./img/partners-map-adaptive.png" alt="">
+                    </div>
                     <ul class="partners_list">
                         <li class="partners_li">
                             <p>ОАО "Тюменский Аккумуляторный завод"</p>
